1. 增加apk和aab混淆脚本

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ afterEvaluate {
         }
     }
 }
+apply from: 'resguard_apk.gradle'
 // apply plugin: 'com.google.gms.google-services'
 
 //android.applicationVariants.all{ variant ->
