--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ buildscript {
         classpath 'com.github.megatronking.stringfog:xor:1.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.20'
+        classpath "com.bytedance.android:aabresguard-plugin:0.1.8"
     }
 }
 
