--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/ic_audiotrack_red_300_24dp">
+        android:roundIcon="@drawable/ic_audiotrack_red_300_24dp"
+        android:theme="@style/SplashTheme">
         <activity
             android:name="com.hauyu.adsdk.demo.SplashActivity"
             android:screenOrientation="portrait"
@@ -30,7 +31,9 @@
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
-        <meta-data android:name="applovin.sdk.verbose_logging" android:value="true"/>
+        <meta-data
+            android:name="applovin.sdk.verbose_logging"
+            android:value="true" />
     </application>
 
 </manifest>
