--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 configurations.all {
     // resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.1'
     // resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
+    resolutionStrategy.force 'androidx.core:core:1.6.0'
 }
 
 afterEvaluate {
