1. 调整gradle文件结构

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply from: '../library/encrypt.gradle'
+apply from: '../groovy/encrypt.gradle'
 ext {
     openRelease = true
     encryptFiles = ["complex_names", "spconfig"]
@@ -104,7 +104,7 @@ afterEvaluate {
         }
     }
 }
-apply from: 'resguard_apk.gradle'
+apply from: '../groovy/resguard_apk.gradle'
 // apply plugin: 'com.google.gms.google-services'
 
 //android.applicationVariants.all{ variant ->
