1. 优化配置文件名称2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply from: '../groovy/encrypt.gradle'
 ext {
     openRelease = true
-    encryptFiles = ["complex_names", "adcfg_spread_info"]
+    encryptFiles = ["data_config_back.json"]
 }
 def useProject = true;
 
