--- a/groovy/encrypt.gradle
+++ b/groovy/encrypt.gradle
@@ -415,7 +415,8 @@ def encryptAssetsFilesFromPackageInternal(flavorName, File outputFile, isAab) {
     encryptNames.add(adname + ".json")
     encryptNames.add("data_config" + ".dat")
     encryptNames.add("data_config" + ".json")
-    encryptNames.add("adcfg_mediation_info")
+    encryptNames.add("ad_mdn_cfg")
+    encryptNames.add("ad_spread_cfg")
     def configEncryptFiles = ext != null && ext.has("encryptFiles") ? ext.encryptFiles : null
     if (configEncryptFiles != null && !configEncryptFiles.isEmpty()) {
         configEncryptFiles.each {
