--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/ic_audiotrack_red_300_24dp"
-        android:theme="@style/SplashTheme">
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.hauyu.adsdk.demo.SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,9 +32,9 @@
                 <data android:scheme="um.5f44faa1f9d1496ef418b17c" />
             </intent-filter>
         </activity>
-        <activity android:name="com.hauyu.adsdk.demo.ListViewForAd" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".MainActivity2" />
+        <activity android:name="com.hauyu.adsdk.demo.AdListViewActivity" />
+        <activity android:name=".CustomViewActivity" />
+        <activity android:name=".MainActivity" android:theme="@style/MainActivity_Theme"/>
 
         <meta-data
             android:name="android.max_aspect"
