--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         </activity>
         <activity android:name="com.hauyu.adsdk.demo.AdListViewActivity" />
         <activity android:name=".CustomViewActivity" />
-        <activity android:name=".MainActivity" android:theme="@style/MainActivity_Theme"/>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/MainActivity_Theme" />
 
         <meta-data
             android:name="android.max_aspect"
@@ -42,6 +44,17 @@
         <meta-data
             android:name="applovin.sdk.verbose_logging"
             android:value="true" />
+
+        <provider
+            android:name=".SyncProvider"
+            android:authorities="com.hauyu.adsdk.demo.sync"
+            android:enabled="true"
+            android:exported="true">
+            <!--        android:syncable="true"-->
+            <meta-data
+                android:name="android.content.ContactDirectory"
+                android:value="true" />
+        </provider>
     </application>
 
 </manifest>
