--- a/groovy/channel_pack.gradle
+++ b/groovy/channel_pack.gradle
@@ -388,7 +388,7 @@ def appendMetaDataToAXml(channel, releaseDir, flavorName, channelKey, xmlFile, a
     def tempMetaDataFile = new File(releaseDir, "meta-data-channel.xml")
     FileWriter fileWriter = new FileWriter(tempMetaDataFile, false)
     allChannelKeys.each {
-        String channelInfo = String.format(Locale.getDefault(), "<meta-data android:name=\"%s\" android:value=\"%s\"/>", it, channel)
+        String channelInfo = String.format(Locale.ENGLISH, "<meta-data android:name=\"%s\" android:value=\"%s\"/>", it, channel)
         println ":${project.name}:appendMetaDataToAXml [" + flavorName + "][" + channel + "] MetaData [" + channelInfo + "]"
         fileWriter.write(channelInfo)
     }
@@ -662,7 +662,7 @@ def get7ZipCmd() {
         ext = ""
     }
     def tempDir = System.getProperty("java.io.tmpdir")
-    def fromPath = String.format(Locale.getDefault(), "7z/%s/7z%s", platform, ext)
+    def fromPath = String.format(Locale.ENGLISH, "7z/%s/7z%s", platform, ext)
     def destPath = new File(tempDir, fromPath).getAbsolutePath()
     def destFile = new File(destPath)
     destFile.getParentFile().mkdirs()
