--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation  'com.umeng.umsdk:asms:1.4.1'// 必选
     implementation 'com.umeng.umsdk:apm:1.5.2' // 错误分析升级为独立SDK，看crash数据请一定集成，可选
     implementation 'com.talkingdata:talkingdata:4.0.69-1'
+
+    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
 }
 
 configurations.all {
