1. 增加展示对话框

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -27,6 +27,17 @@
       ]
     },
     {
+      "name": "splash_applovin",
+      "mode": "con",
+      "pids": [
+        {
+          "sdk": "applovin",
+          "type": "splash",
+          "pid": "d9b1e8f961849981"
+        }
+      ]
+    },
+    {
       "name": "banner_admob",
       "mode": "con",
       "pids": [
