1. 优化admob成功加载的价值

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -80,6 +80,8 @@
         {
           "sdk": "admob",
           "type": "interstitial",
+          "ecpm": 10,
+          "mac": 3,
           "pid": "ca-app-pub-3940256099942544/1033173712"
         }
       ]
