1. 配置ecpm修改为cpm

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -80,7 +80,7 @@
         {
           "sdk": "admob",
           "type": "interstitial",
-          "ecpm": 10,
+          "cpm": 10,
           "mac": 3,
           "pid": "ca-app-pub-3940256099942544/1033173712"
         }
@@ -164,6 +164,8 @@
         {
           "sdk": "admob",
           "type": "native",
+          "cpm": 5,
+          "mac": 3,
           "pid": "ca-app-pub-3940256099942544/2247696110"
         }
       ]
