--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -82,6 +82,7 @@
           "type": "interstitial",
           "cpm": 10,
           "mac": 3,
+          "ddl": 1,
           "pid": "ca-app-pub-3940256099942544/1033173712"
         }
       ]
