1. SDK需要的仓库地址

--- a/groovy/encrypt.gradle
+++ b/groovy/encrypt.gradle
@@ -6,15 +6,20 @@ import java.util.concurrent.TimeUnit
 import java.util.zip.ZipEntry
 import java.util.zip.ZipFile
 
-// 阿里云映射的maven仓库地址
-// maven { url 'https://maven.aliyun.com/repository/public' }
-// maven { url 'https://maven.aliyun.com/repository/central' }
-// maven { url 'https://maven.aliyun.com/repository/google' }
-// maven { url 'https://maven.aliyun.com/repository/jcenter' }
-// maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-// maven { url 'https://maven.aliyun.com/repository/releases' }
-// maven { url 'https://adcolony.bintray.com/AdColony' }
-// maven { url 'https://jitpack.io' }
+//SDK需要的仓库地址
+//mavenCentral()
+//google()
+//maven { url "http://nexus.webeyemobi.com/repository/maven-public/"}
+//maven { url 'https://maven.aliyun.com/repository/public' }
+//maven { url 'https://maven.aliyun.com/repository/central' }
+//maven { url 'https://maven.aliyun.com/repository/google' }
+//maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+//maven { url 'https://maven.aliyun.com/repository/releases' }
+//maven { url 'https://sdk.tapjoy.com/' }
+//maven { url 'https://jitpack.io' }
+//maven { url 'https://android-sdk.is.com/'}
+//maven { url 'https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea'}
 
 /**
  * 首字母转大写
