--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,11 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:multidex:1.0.0'
-    compile 'com.android.support:multidex:1.0.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
     if (useProject) {
         implementation project(":library")
     } else {
-        implementation 'com.hauyu:adsdk:+'
+        implementation 'com.hauyu:rabbit:+'
     }
     configurations.all {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
