--- a/groovy/encrypt.gradle
+++ b/groovy/encrypt.gradle
@@ -315,6 +315,7 @@ def generateAdFileByUser(flavor) {
     def adConfigName = "cfg" + packagenameMd5.substring(0, 8) + ".[dat/json]"
     println("+++++++++++++++++++++++++++++++++++++++++++")
     println "generateAdFileName : " + adConfigName
+    println "generateMDFileName : " + "mdn" + packagenameMd5.substring(0, 8).reverse()
     println("-------------------------------------------")
 }
 
@@ -401,15 +402,17 @@ def encryptAssetsFilesFromApk(flavor, isAab) {
  */
 def encryptAssetsFilesFromPackageInternal(flavorName, File outputFile, isAab) {
     def appId = getApplicationId(flavorName)
-    def packagemd5 = Aes.string2MD5(appId)
-    def adname = "cfg" + packagemd5.substring(0, 8)
+    def packageMd5 = Aes.string2MD5(appId)
+    def md5sub = packageMd5.substring(0, 8)
+    def adName = "cfg" + md5sub
     def encryptNames = []
-    encryptNames.add(adname + ".dat")
-    encryptNames.add(adname + ".json")
+    encryptNames.add(adName + ".dat")
+    encryptNames.add(adName + ".json")
     encryptNames.add("data_config" + ".dat")
     encryptNames.add("data_config" + ".json")
     encryptNames.add("ad_mdn_cfg")
     encryptNames.add("ad_spread_cfg")
+    encryptNames.add("mdn" + md5sub.reverse())
     def configEncryptFiles = ext != null && ext.has("encryptFiles") ? ext.encryptFiles : null
     if (configEncryptFiles != null && !configEncryptFiles.isEmpty()) {
         configEncryptFiles.each {
