--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -1,5 +1,8 @@
 {
   "scene_prefix": "adsdk_demo_",
+  "share_place": {
+    "for_native_layout": "native_admob"
+  },
   "all_places": [
     {
       "name": "splash_admob",
