--- a/build.gradle
+++ b/build.gradle
@@ -40,16 +40,15 @@ allprojects {
     repositories {
         mavenCentral()
         google()
-        maven { url rootProject.ext.publishUri }
-        maven { url 'https://maven.aliyun.com/repository/central' }
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'https://maven.aliyun.com/repository/releases' }
-        google()
         jcenter()
         mavenLocal()
+        maven { url rootProject.ext.publishUri }
+//        maven { url 'https://maven.aliyun.com/repository/central' }
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+//        maven { url 'https://maven.aliyun.com/repository/public' }
+//        maven { url 'https://maven.aliyun.com/repository/releases' }
         maven { url 'https://sdk.tapjoy.com/' }
         maven { url 'https://android-sdk.is.com/' }
         maven { url "https://s3.amazonaws.com/smaato-sdk-releases/" }
