--- a/groovy/resguard_aab.gradle
+++ b/groovy/resguard_aab.gradle
@@ -164,9 +164,9 @@ aabResGuard {
     //是否允许去除重复资源
     mergeDuplicatedRes = true
     //是否允许过滤文件, 被过滤的文件将不会被打包到aab
-    enableFilterFiles = false
+    enableFilterFiles = true
     // filterList = ['*/armeabi/*', '*/armeabi-v7a/*', '*/arm64-v8a/*', 'META-INF/*']
-    filterList = []
+    filterList = ["BUNDLE-METADATA/**/proguard.map"]
     // switch of filter strings
     enableFilterStrings = false
     // strings will be filtered in this file, 过滤文案列表路径，默认在mapping同目录查找
