1. 增加aab转apk代码，但bundletool.jar文件里面没有主清单代码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
         }
     }
 
+    setProperty("archivesBaseName", "app-bundle-custom")
+
     signingConfigs {
         config {
             keyAlias 'taugin'
