1. 优化广告布局

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation 'com.talkingdata:talkingdata:4.0.69-1'
 
     implementation 'com.github.markzhai:blockcanary-android:1.5.0'
+    // view预加载占位符，参考文章：https://www.jianshu.com/p/49439c425ae3
+    implementation 'me.samlss:broccoli:1.0.0'
 }
 
 configurations.all {
