--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
 
     repositories {
+        maven { url 'https://raw.githubusercontent.com/martinloren/AabResGuard/mvn-repo' }
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
@@ -23,7 +24,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.20'
-        classpath "com.bytedance.android:aabresguard-plugin:0.1.8"
+        // classpath "com.bytedance.android:aabresguard-plugin:0.1.8"
+        classpath "com.bytedance.android:aabresguard-plugin:0.1.10"
     }
 }
 
